feat(sentry): install sentry

--- a/projects/debug-app/src/app/app.component.html
+++ b/projects/debug-app/src/app/app.component.html
@@ -1,3 +1,4 @@
 {{ title }}
 <ui-ui [props]="uiProps"></ui-ui>
 <router-outlet></router-outlet>
+<button (click)="handleErrorButton()">Hello, my Error!!</button>
